# qwtd

./: README.md  pyproject.toml
src/qwtd/: __main__.py  app.py  config.py  dateutils.py  db_setup.py  db_wrapper.py  editor.py  status_bar.py  titlebar.py
