[project]
name = "qwtd"
version = "0.1.0"
description = "Quickly make and manage notes from the commandline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["prompt-toolkit>=3.0.51"]

[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[project.scripts]
qwtd = "qwtd.db_wrapper:run_with_db"
