[project]
name = "qwtd"
version = "0.1.0"
description = "Quickly make and manage notes from the commandline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit>=3.0.51",
    "pygments>=2.19.1",
]

[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "types-pygments>=2.19.0.20250516",
]

[project.scripts]
qwtd = "qwtd.db_wrapper:run_with_db"
